@@ -40,8 +40,21 @@ function codexin_scripts () {
 
 	wp_enqueue_style( 'main-stylesheet', get_stylesheet_uri() );
 	wp_enqueue_style( 'responsive-stylesheet', get_template_directory_uri() . '/css/responsive.css' );
+
+	// Insert IE9 specific stylesheet in header
+	wp_enqueue_style( 'IE9-styleshet', get_template_directory_uri() . '/css/ie9.css' );
+	wp_style_add_data( 'IE9-styleshet', 'conditional', 'IE 9' );
+
+
 	wp_enqueue_style( 'scss-stylesheet', get_template_directory_uri() . '/scss/style.css' );
 	
+
+	//load <=IE9 scripts
+
+	wp_enqueue_script( 'htmlshiv', 'https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js', '', '3.7.3', false);
+	wp_script_add_data( 'htmlshiv', 'conditional', 'lt IE 9' );
+	wp_enqueue_script( 'respond', 'https://oss.maxcdn.com/respond/1.4.2/respond.min.js', '', '1.4.2', false);
+	wp_script_add_data( 'respond', 'conditional', 'lt IE 9' );
 
 	// Load scripts
 	wp_enqueue_script( 'bootstrapjs', get_template_directory_uri() . '/js/bootstrap.min.js', array ( 'jquery' ), 1.1, true);
